--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -39,7 +39,12 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+             {%if request.user.is_authenticated%}
+            <form action="" method="post">
+              {% csrf_token %}
+              <a class="btn btn-danger" href="{%url 'logout' %}">Logout</a>
+            </form>
+             {%endif%}
             </li>
           </ul>
           <form class="d-flex" role="search">
