--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="carouselExampleSlidesOnly " class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleSlidesOnly " class="carousel slide m-3" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRu0JAMPtLKtfmRY0TApaXq3s80-4RacHL1lA&usqp=CAU" class="d-block w-100 " alt="...">
