--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url "home" %}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -46,6 +46,9 @@
           </li>
 
           {%if request.user.is_authenticated%}
+          <li class=" d-inline">
+            <a class="nav-link active" aria-current="page" href="{% url "second" %}">Page 2</a>
+          </li>
           <li class=" d-inline">
             <p class="fw-bold bg-success p-2">Welcome  {{uname}}</p>
           </li>
