--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-warning text-white">
+  <nav class="navbar navbar-expand-lg bg-warning text-white fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">AUTH</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -75,7 +75,7 @@
 
   {% endblock %}
   <!-- Site footer -->
-  <footer class="site-footer">
+  <footer class="site-footer ">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
